--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ item.item_name }}</title>
-</head>
-<body>
-    <h1>{{ item.item_name }}</h1>
-    <h2>{{ item.item_desc }}</h2>
-    <h5>{{ item.item_price }}$</h5>
+{% extends 'food/base.html' %}
 
-</body>
-</html>
+{% block body %}
+
+<div class="container">
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <img src="{{ item.item_image }}" height="500px"  class="card" alt="">
+        </div>
+        <div class="col-md-6"> 
+            <h1>{{ item.item_name }}</h1>
+            <h3>{{ item.item_desc }}</h3>
+            <h5>$ {{ item.item_price }}</h5>
+            <a href="{% url 'food:delete_item' item.id %}" >Delete</a>
+        </div>
+    </div>
+</div>
+
+
+
+{% endblock %}
