--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,18 +1,39 @@
+
+{% extends 'food/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   
 </head>
 <body>
-    <h1>This is templates</h1>
-   <ul>Food items </ul>
+   
+
+     {% block body %}
+
+     <br>
      {% for item in all_items %}
-        <a href="{% url 'detail' {{ item.id }} %}"><li> {{ item.id }} -- {{ item.item_name }}</li> </a>
+
+     <div class="row">
+        <div class="col-md-3 offset-md-2">
+            <img class="card" height="150px" src="{{ item.item_image }}">
+        </div>
+        <div class="col-md-4">
+            <h3>{{ item.item_name }}</h3>
+            <h5>{{ item.item_desc }}</h5>
+            <h6>$ {{ item.item_price }}</h6>
+        </div>
+        <div class="col-md-2">
+            <a href="{% url 'food:details' item.id %}" class="btn btn-success">Details</a>
+        </div>
+     </div>
+     <br>
 
      {% endfor %}
 
+     {% endblock %}
      <h2>Hello there</h2>
 </body>
 </html>
