--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -10,8 +10,8 @@
             <img src="{{ item.item_image }}" height="500px"  class="card" alt="">
         </div>
         <div class="col-md-6"> 
-            <h1>{{ item.item_name }}</h1>
-            <h3>{{ item.item_desc }}</h3>
+            <h1>{{ object.item_name }}</h1>
+            <h3>{{ object.item_desc }}</h3>
             <h5>$ {{ item.item_price }}</h5>
             <a href="{% url 'food:delete_item' item.id %}" >Delete</a>
         </div>
