--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -15,7 +15,6 @@
 
      <br>
      {% for item in all_items %}
-
      <div class="row">
         <div class="col-md-3 offset-md-2">
             <img class="card" height="150px" src="{{ item.item_image }}">
@@ -24,6 +23,7 @@
             <h3>{{ item.item_name }}</h3>
             <h5>{{ item.item_desc }}</h5>
             <h6>$ {{ item.item_price }}</h6>
+            <p>Posted By : {{item.user_name}}</p>
         </div>
         <div class="col-md-2">
             <a href="{% url 'food:details' item.id %}" class="btn btn-success">Details</a>
