--- a/users/templates/user/login.html
+++ b/users/templates/user/login.html
@@ -2,12 +2,33 @@
 
 {% block body %}
 <div class="container">
-
-     <form method="POST">
-          {% csrf_token %}
-          {{  form  }}
-          <button type="submit">Login</button>
-     </form>
+     <div class="row">
+          <div class="col-md-4 offset-md-4">
+               <div class="card">
+                    <div class="card-header bg-info text-white">
+                         <div class="card-title">LOGIN</div>
+                    </div>
+                    <div class="card-body">
+                         <form method="POST">
+                              {% csrf_token %}
+                              {% for field in  form %}
+                                   <div class="form-group">
+                                        {{ field.name }}
+                                        <br>
+                                        {{ field }}
+                                        
+                                   </div>
+                              {% endfor %}
+                              <br>
+                              <button class="btn-info" type="submit">
+                                   Login
+                              </button>
+                         </form>
+                    </div>
+               </div>
+          </div>
+     </div>
+     
 </div>
 
 
