--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -6,12 +6,12 @@
     <br>
     <br>
     <div class="row">
-        <div class="col-md-6">
-            <img src="{{ item.item_image }}" height="500px"  class="card" alt="">
+        <div class="col-md-4">
+            <img src="{{ item.item_image }}" height="300px"  class="img-thumbnail" alt="">
         </div>
-        <div class="col-md-6"> 
-            <h1>{{ object.item_name }}</h1>
-            <h3>{{ object.item_desc }}</h3>
+        <div class="col-md-8 p-3"> 
+            <div class="fs-1 fw-bolder">{{ object.item_name }}</div>
+            <div class="fs-2">{{ object.item_desc }}</div>
             <h5>$ {{ item.item_price }}</h5>
             <a href="{% url 'food:delete_item' item.id %}" >Delete</a>
         </div>
