--- a/users/templates/user/login.html
+++ b/users/templates/user/login.html
@@ -1,26 +1,33 @@
 {% extends 'food/base.html' %}
 
 {% block body %}
+<br>
 <div class="container">
+     <br>
      <div class="row">
-          <div class="col-md-4 offset-md-4">
-               <div class="card">
-                    <div class="card-header bg-info text-white">
-                         <div class="card-title">LOGIN</div>
+          <div class="col-md-8 offset-md-2">
+               <div class="card border-dark mb-6">
+                    <div class="card-header bg-dark text-white text-center">
+                         <div class="card-title display-4 fw-medium p-3">LOGIN</div>
                     </div>
                     <div class="card-body">
                          <form method="POST">
                               {% csrf_token %}
                               {% for field in  form %}
-                                   <div class="form-group">
-                                        {{ field.name }}
-                                        <br>
-                                        {{ field }}
-                                        
+                                   <div class="form-group fw-medium fs-5">
+                                        {% if field.name == "username" %}
+                                   <label >User Name</label>
+                                  {%else%}
+                                  <label>Password</label>
+                                   <!-- {{ field.name }} -->
+                              {% endif %}
+                              <br>
+                                   {{ field }}
                                    </div>
+                                   <hr>
                               {% endfor %}
                               <br>
-                              <button class="btn-info" type="submit">
+                              <button class="btn btn-primary btn-lg btn-block col-12" type="submit">
                                    Login
                               </button>
                          </form>
